import java.util.HashMap;

public class Groupe {

    private HashMap<Formation, Etudiant> etudiants;

    public Groupe() {
        this.etudiants = new HashMap<Formation, Etudiant>();
    }
}
