public class Identite {

    /**
     * attribut nom
     */
    private String nom;

    /**
     * attribut prenom
     */
    private String prenom;

    /**
     * attribut NIP
     */
    private String NIP;

    /**
     * Constructeur de la classe Identite
     * @param nom
     * @param prenom
     * @param NIP
     */
    public Identite(String nom, String prenom, String NIP) {
        this.nom = nom;
        this.prenom = prenom;
        this.NIP = NIP;
    }
}
