@startuml
'https://plantuml.com/class-diagram

class Etudiant{
 - resultats : HashMap<Matiere, List<double>>
    + Etudiant(Identite, Formation)
    + ajouter(Matiere, double: boolean
    + moyenne(Matiere): double
    + moyenne(): double
}

class Identite{
 - nom : String
 - prenom : String
 - NIP : String
    + Identite(String, String, String)
}

class Formation{
- idenitifiant : String
- coefficients : HashMap<Matiere, double>
    + Formation(String)
    + ajouterMatiere(Matiere, double)
    + supMatiere(Matiere)
    + getCoeff(Matiere): double
}

class Matiere{
 - nom : String
    + Matiere(String)
}

class Groupe{
- etudiants : HashMap<Formation, List<Etudiant>>
    + Group(HashMap<Formation, List<Etudiant>>)
}

Identite "1" <-- "1" Etudiant : identite
Etudiant "1" --> "*" Formation : formation
Etudiant "1" --> "*" Matiere : matiere
Formation "1" --> "*" Matiere : collectionMatiere
Groupe  "1" --> "*" Formation : formation
Groupe  "1" --> "*" Etudiant : etudiants

@enduml